--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-react-parser": "4.0.0",
     "lodash": "4.17.21",
     "query-string": "8.1.0",
+    "rc-field-form": "^2.7.1",
     "react": "18.2.0",
     "react-countup": "6.4.2",
     "react-device-detect": "2.2.3",
@@ -48,7 +49,7 @@
     "@types/uuid": "9.0.2",
     "@vitejs/plugin-react-swc": "3.11.0",
     "rollup-plugin-visualizer": "5.9.0",
-    "sass": "1.62.1",
+    "sass": "^1.97.1",
     "typescript": "5.3.3",
     "vite": "7.3.0"
   }
